feat: Translate with context menu.

--- a/src/background.html
+++ b/src/background.html
@@ -2,6 +2,7 @@
 <html>
 
 <body>
+    <script defer type="module" src="./third_party/browser-polyfill.js"></script>
     <script type="module" src="./background.js"></script>
 </body>
 
